# Pipeline_Newgen

./: .gitignore  CLAUDE.md  Pipeline_Newgen.bat  Pipeline_newgen_rev1.code-workspace  README.md  pyproject.toml
config/: config_incertezas_rev3.xlsx  load_sweep_feature_defaults.json
config/pipeline29_text/: compare.toml  defaults.toml  instruments.toml  knock_thresholds.toml  (+3 more)
docs/: MIGRATION_STATUS.md
handoff/: CHANGES_INDEX.md  FUNCTION_CONTEXT_FORMAT.md  HANDOFF_MASTER.md  stages_status.md
scripts/: compare_cycle.py  diagnose_nox_inversion.py  evaluate_media_comparison.py  plot_uncertainty_consumption.py  replot_consumo_individual.py  replot_n_th_individual.py  run_legacy_compare_n_th.py
tests/: test_bridge_build_final_table.py  test_bridge_compare_iteracoes.py  test_bridge_export_excel.py  test_bridge_unitary_plots.py  test_campaign_planner_tab.py  test_campaign_scan.py  test_compare_iteracoes.py  test_compare_plots.py  test_config_adapter.py  test_delta_vs_ref.py  test_feature_flags.py  test_final_table.py  test_input_discovery.py  test_kibox_reader.py  test_labview_reader.py  test_legacy_gui_backend.py  test_motec_reader.py  test_open_to_csv_adapter.py  test_orchestrator.py  test_plot_point_filter.py  test_plot_scope.py  test_run_time_diagnostics.py  test_runtime_dirs.py  test_runtime_preflight.py  test_runtime_runner.py  test_special_load_plots.py  test_state.py  test_sweep_axis.py  test_sweep_binning.py  test_sweep_duplicate_selector.py  test_sweep_stages.py  test_trechos_ponto.py  test_uncertainty_audit.py  test_unitary_plots.py  test_upstream_frames.py
(+177 files in other folders)
