[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline-newgen-rev1"
version = "0.1.0"
description = "Structured next-generation migration for Nanum pipeline workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
]

[project.optional-dependencies]
excel = ["openpyxl>=3.1", "python-calamine>=0.6"]
gui = ["PySide6>=6.10"]
legacy = ["matplotlib>=3.8"]

[project.scripts]
pipeline-newgen = "pipeline_newgen_rev1.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
